// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snaphots matches snapshots 1`] = `
<div
  className="rollex-segment"
>
  <div
    className="rollex-digits"
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <StaticCounterDigit
      digit="0"
      digitMap={Object {}}
      digitWrapper={[Function]}
      radix={10}
    />
    <StaticCounterDigit
      digit="0"
      digitMap={Object {}}
      digitWrapper={[Function]}
      radix={10}
    />
  </div>
  <div
    className="rollex-label"
  >
    seconds
  </div>
</div>
`;

exports[`snaphots matches snapshots 2`] = `
<div
  className="rollex-segment"
>
  <div
    className="rollex-digits"
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <AnimatedCounterDigit
      digit="0"
      digitMap={Object {}}
      digitWrapper={[Function]}
      direction="down"
      easingDuration={300}
      easingFunction="ease-in"
      maxValue={5}
      radix={10}
    />
    <AnimatedCounterDigit
      digit="0"
      digitMap={Object {}}
      digitWrapper={[Function]}
      direction="down"
      easingDuration={300}
      easingFunction="ease-in"
      maxValue={9}
      radix={10}
    />
  </div>
  <div
    className="rollex-label"
  >
    seconds
  </div>
</div>
`;
